tool/tests/snapshots/dotnet_target__setters_getters_properties@RawFfiResultVoidVoid.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using SomeOrg.SomeModule;
using We.Also.Need.This;
using OurOrg.OurRustLib.Diplomat;
#pragma warning restore 0105

namespace OurOrg.OurRustLib.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct FfiResultVoidVoid
{
    private const string NativeLib = "mylib";
    [MarshalAs(UnmanagedType.U1)]
    public bool isOk;

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "result_unit_unit_destroy", ExactSpelling = true)]
    public static unsafe extern void Destroy(IntPtr self);
}

