tool/tests/snapshots/dotnet_target__simple_non_opaque_struct@RawMyStruct.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

[StructLayout(LayoutKind.Sequential)]
public partial struct MyStruct
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    public byte a;

    public byte b;

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_new", ExactSpelling = true)]
    public static unsafe extern MyStruct New(byte a, byte b);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_get_a", ExactSpelling = true)]
    public static unsafe extern byte GetA(MyStruct* self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "MyStruct_set_b", ExactSpelling = true)]
    public static unsafe extern void SetB(MyStruct* self, byte b);
}

