tool/tests/snapshots/dotnet_target__struct_documentation@RawFoo.cs.snap
---
source: tool/tests/dotnet_target.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop.Raw;

#nullable enable

/// <summary>
/// Documentation for Foo.
/// Second line.
/// </summary>
[StructLayout(LayoutKind.Sequential)]
public partial struct Foo
{
#if __IOS__
    private const string NativeLib = "librust.framework/librust";
#else
    private const string NativeLib = "rust";
#endif

    /// <summary>
    /// Documentation for x.
    /// </summary>
    public byte x;

    /// <summary>
    /// Documentation for get_x.
    /// </summary>
    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "Foo_get_x", ExactSpelling = true)]
    public static unsafe extern byte GetX(Foo* self);
}

